# ntpwedit

./: BUILD.TXT  CMakeLists.txt  COPYING.TXT  HISTORY.txt  Makefile  Makefile.dep  README.md  configure-mingw.cmd  configure-mingw64.cmd  configure-msvc.cmd  configure-msvc64.cmd  dlgabout.c  dlgabout.h  dlgpass.c  dlgpass.h  log.c  log.h  main.c  map.pl  message.c  message.h  ntpw.c  ntpw.h  ntpwedit.exe.manifest  ntreg.c  ntreg.h  openssl.bat  resource.rc  version.c  version.h
dlglib/: COPYING.txt  Makefile  Makefile.dep  ctl_button.c  ctl_checkbox.c  ctl_edit.c  ctl_groupbox.c  ctl_hotkey.c  ctl_image.c  ctl_label.c  ctl_listview.c  ctl_progress.c  ctl_richview.c  dialogs.c  dialogs.h  dlgpack.c  unicode.c  unicode.h
libdlg/: CMakeLists.txt  COPYING.txt  dialogs.c  dialogs.h  dlgpack.c  unicode.c
libntpw/: CMakeLists.txt  log.c  log.h  ntpw.c  ntreg.c  ntreg.h  sam.h
res/: ntpwedit.exe.manifest  ntpwedit64.exe.manifest
